@@ -35,6 +35,8 @@ Version 0.9
 
 - The IRC logs lexer is now able to colorize weechat logs too.
 
+- Added new assambler lexers.
+
 
 Version 0.8.1
 -------------
